--- a/src/shared/i18n/it/mail.json
+++ b/src/shared/i18n/it/mail.json
@@ -1,67 +1,67 @@
 {  
     "on_ramp":{
-        "header": "Your deposit has been successfully processed",
-        "closing_words":["Happy trading"]
+        "header": "Il tuo deposito e'stato processato correttamente",
+        "closing_words":["Buon trading"]
     },
     "off_ramp":{
         "1":{
-            "header": "We have received your funds",
-            "closing_words": ["Next Step: We sold your funds and are now preparing the bank transfer.",
-            "Once your money has left our bank account you will receive the final wire-transfer email."]
+            "header": "Abbiamo ricevuto i tuoi fondi",
+            "closing_words": ["Passo successivo: Abbiamo venduto i tuoi fondi ed ora stiamo preparando il transferimento bancario.",
+            "Una volta che i tuoi soldi avranno lasciato il nostro conto corrente bancario riceverai una una email di notifica del bonifico finale."]
         },
         "2":{
-            "header": "We sold your funds",
-            "closing_words": ["Next Step: We sold your funds and are now preparing the bank transfer.",
-            "Once the money is sent out of our bank account you will receive the final wire-transfer email."]
+            "header": "Abbiamo venduto i tuoi fondi",
+            "closing_words": ["Next Step: Abbiamo venduto i tuoi fondi ed ora stiamo preparando il transferimento bancario.",
+            "Una volta che i tuoi soldi saranno in uscita dal nostro conto corrente bancario riceverai una una email di notifica del bonifico finale."]
         },
         "3":{
-            "header": "We have arranged the bank transfer",
-            "closing_words": ["The payment has just left our bank account and will be visible on your bank account",
-            "The payment has just left our bank account and will be visible on your bank account shortly.",
-            "In the meantime the bank performances are responsible for the wire transfer duration.",
+            "header": "Abbiamo eseguito il trasferimento",
+            "closing_words": ["Il pagamento ha appena lasciato il nostro conto corrente bancario e sara' visibile sul tuo conto",
+            "In pagamento ha appena lascitato il nostro conto corrente bancario e sara' visibile sul tuo conto corrente bacario a breve.",
+            "Nel frattempo la banca in carico e'responsabile della durata del transferimento.",
             "",
-            "Thank you for using the DFX withdrawal service."]
+            "Grazie per aver utilizzato il servizio di prelievo di DFX."]
         }
     },
     "kyc_return":{
-        "header":"We need your feedback to be able to complete your deposit (limit exceeded)",
+        "header":"Abbiamo bisogno del tuo feedback per completare il tuo deposito (limite superato)",
         "closing_words":
-            ["In order to process your deposit we need your feedback",
-            "With your deposit you have exceeded the maximum amount of 900 € per day without verification (KYC)",
-            "We can offer you the following options:",
+            ["Abbiamo bisogno del tuo feedback per processare il tuo deposito ",
+            "Con il tuo deposito hai superato la quota massima di 900 € al giorno senza verification (KYC)",
+            "Possiamo offrire le seguenti opzioni:",
             "",
-            "1) Verification (KYC) - please follow this instruction => <a href=\"https://defichain-wiki.com/wiki/DFX_FAQ#Schritt-f.C3.BCr-Schritt_Anleitung_KYC-Prozess\">KYC Manual</a>",
-            "After verification we will execute your order and credit your funds accordingly",
+            "1) Verifica (KYC) - per favore segui le seguenti instruzioni => <a href=\"https://defichain-wiki.com/wiki/DFX_FAQ#Schritt-f.C3.BCr-Schritt_Anleitung_KYC-Prozess\">KYC Manual</a>",
+            "Dopo la verifica eseguiremo il tuo ordine e accrediteremo i tuoi fondi opportunamente",
             "",
-            "2) Return - If you do not wish to make a verification, we will return your entire deposit amount.",
-            "In this case, please send an email to support@dfx.swiss with your IBAN and the reason for the return",
+            "2) Restituzione - se non desideri effettuare una verifica, ti restituiremo l'intera somma depositata.",
+            "in questo caso, preghiamo di inviare una email a support@dfx.swiss con il tuo IBAN e il motivo della restituzione",
             "",
-            "If we do not hear from you within five business days, we will return your deposit to your bank account."]
+            "In caso di mancate tue notizie entro cinque giorni lavorativi, reinvieremo il tuo deposito al tuo conto corrente bancario."]
     },
     "hash_return":{
-        "header":"We need your feedback to be able to complete your deposit (missing information)",
+        "header":"Abbiamo bisogno del tuo feedback per completare il tuo deposito (informazioni mancanti)",
         "closing_words":
-            ["Unfortunately, we are not able to allocate your deposit exactly, due to an incorrect payment purpose ( wrong or missing hash code).",
-            "The hash code (format xxxx-xxxx-xxxx) was created in combination with your Fiat2Crypto Payment Route."]
+            ["Sfortunatamente, non siamo in grado di allocare il tuo deposito correttamente, a causa di un incorretta causale ( hash code errato o mancante).",
+            "L'hash code (formato xxxx-xxxx-xxxx) e' stato creato in combinazione con il tuo Fiat2Crypto Percorso di Pagamento."]
     },
     "kyc_reminder":{
-        "header":"Friendly reminder of your KYC Verification at DFX.swiss.",
-        "closing_words":["Friendly reminder of your KYC Verification at DFX.swiss.","Please check payment page (Buy/Sell button in the DFX App) or your mails"]
+        "header":"Gentile promemoria per la tua verifica KYC presso DFX.swiss.",
+        "closing_words":["Gentile promemoria per la tua verifica KYC presso DFX.swiss.","Per favore controlla la pagina di pagamento (pulsante Buy/Sell nella DFX App) o la tua mail"]
     },
     "table":{
-        "deposit": "Deposited",
-        "crypto_payment": "Crypto payment",
-        "fee": "Fee",
-        "foreign_currency_fee": "Foreign currency fee",
-        "exchange_rate": "Exchange rate",
-        "wallet_address": "Wallet address",
-        "transaction_id": "Transaction ID",
-        "output": "Output",
-        "bank_account": "Bank Account",
-        "bank_tx_id": "Bank Tx ID",
-        "payout": "Payout",
-        "tx_id": "Transaction ID"
+        "deposit": "Depositato",
+        "crypto_payment": "Pagamento Crypto",
+        "fee": "Commissione",
+        "foreign_currency_fee": "Commissione valuta straniera",
+        "exchange_rate": "Tasso di cambio",
+        "wallet_address": "Indirizzo Wallet",
+        "transaction_id": "ID Transazione",
+        "output": "Risultato",
+        "bank_account": "Conto Corrente Bancario",
+        "bank_tx_id": "ID Transazione Bancaria",
+        "payout": "Pagamento",
+        "tx_id": "ID Transazione"
     },  
-    "tie_off":"Your DFX Team",
-    "bitcoiners": "Bitcoiners by heart ♥"
+    "tie_off":"Il tuo DFX Team",
+    "bitcoiners": "Bitcoiners con il cuore ♥"
 }
