--- a/src/shared/i18n/fr/mail.json
+++ b/src/shared/i18n/fr/mail.json
@@ -1,24 +1,24 @@
 {
   "kyc": {
     "reminder": {
-      "salutation": "Friendly reminder of your {status}.",
-      "body": "<p>Please continue by clicking on continue KYC on payment page (Buy & Sell) or <a href=\"{url}\">here</a>.</p>",
-      "title": "KYC Reminder"
+      "salutation": "Terminez votre vérification",
+      "body": "<p>Nous avons remarqué que vous n'avez pas terminé votre vérification. ({status})</p><p>Veuillez continuer en cliquant sur le bouton d'actualisation dans la section Limites de la page de paiement (Achat, Vente & Staking) ou <a href=\"{url}\" style=\"color:#FFFFFF\">ici</a>.</p><p>Franchissez le dernier pas et développez votre liberté financière dès aujourd'hui</p><p>Votre équipe DFX<br>Bitcoiners by heart ♥</p>",
+      "title": "Terminez votre vérification"
     },
     "chatbot": {
-      "salutation": "You have finished the chatbot.",
-      "body": "<p>To continue with identification you have to click continue KYC on payment page (Buy & Sell) or <a href=\"{url}\">here</a>.</p>",
-      "title": "Chatbot completed"
+      "salutation": "Chatbot terminé - prochaine étape pour votre vérification",
+      "body": "<p>Pour commencer l'identification en ligne, cliquez sur le bouton d'actualisation dans la section Limites de la page de paiement (Achat, Vente & Staking) ou <a href=\"{url}\" style=\"color:#FFFFFF\">ici</a>.</p><p>Franchissez le dernier pas et développez votre liberté financière dès aujourd'hui</p><p>Votre équipe DFX<br>Bitcoiners by heart ♥</p>",
+      "title": "Chatbot terminé"
     },
     "ident": {
-      "salutation": "You have finished the identification.",
-      "body": "<p>you have completed KYC and are now provisionally verified. No further steps are necessary from your side.</p>",
-      "title": "Identification completed"
+      "salutation": "Votre vérification est terminée",
+      "body": "<p>Nous avons le plaisir de vous informer que la vérification de votre compte est terminée.<br>Aucune autre démarche n'est nécessaire de votre part.</p><p>Bon trading!</p><p>Votre équipe DFX<br>Bitcoiners by heart ♥</p>",
+      "title": "Vérification terminé"
     },
     "failed": {
-      "salutation": "Your online identification failed.",
-      "body": "<p>We activated video identification. To start you have to click continue KYC on payment page (Buy & Sell) or <a href=\"{url}\">here</a>.</p>",
-      "title": "Online identification failed"
+      "salutation": "Votre identification en ligne a échoué",
+      "body": "<p>Nous avons remarqué que votre identification en ligne a échoué. Nous avons cependant déjà débloqué l'identification vidéo pour vous.<br>Veuillez continuer en cliquant sur le bouton d'actualisation dans la section Limites de la page de paiement (Achat, Vente & Staking) ou <a href=\"{url}\" style=\"color:#FFFFFF\">ici</a>.</p><p>Franchissez le dernier pas et développez votre liberté financière dès aujourd'hui</p><p>Votre équipe DFX<br>Bitcoiners by heart ♥</p>",
+      "title": "Votre identification en ligne a échoué"
     }
   }
 }
